[gd_scene load_steps=15 format=3 uid="uid://d0wdjv8wkfeky"]

[ext_resource type="Texture2D" uid="uid://ca8j4eahbetev" path="res://Pawn_Blue.png" id="1_d0jml"]
[ext_resource type="Script" path="res://minion.gd" id="1_p05e5"]
[ext_resource type="PackedScene" uid="uid://dgalw2mmy4h6q" path="res://components/health.tscn" id="3_hjvrf"]
[ext_resource type="PackedScene" uid="uid://ddhshpb0d1es" path="res://components/minion_state.tscn" id="4_5r8dl"]
[ext_resource type="Texture2D" uid="uid://bgx5eu47c4oql" path="res://assets/Tiny Swords (Update 010)/UI/Ribbons/Ribbon_Blue_3Slides.png" id="5_0g4bq"]

[sub_resource type="Animation" id="Animation_gf8by"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_b8ypb"]
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34]
}

[sub_resource type="Animation" id="Animation_hi5vt"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_yq6eg"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_gqe2y"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wx82a"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [29, 30, 31, 32, 33, 34]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bg5ok"]
_data = {
"Build": SubResource("Animation_gf8by"),
"Carry": SubResource("Animation_b8ypb"),
"Chop": SubResource("Animation_hi5vt"),
"Idle": SubResource("Animation_yq6eg"),
"Original": SubResource("Animation_gqe2y"),
"Run": SubResource("Animation_wx82a")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdohu"]
size = Vector2(20, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5041y"]
size = Vector2(40, 46)

[node name="Minion" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_p05e5")
speed = 10000

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_d0jml")
hframes = 6
vframes = 6
frame = 33
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"player": "AnimationPlayer",
"slice": "",
"source": "res://assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/Pawn_Blue.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"slice_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "0febdd94e9b7064573323d12dca9ddf9"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_bg5ok")
}

[node name="EnvironmentCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 23)
shape = SubResource("RectangleShape2D_gdohu")

[node name="HurtBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_5041y")

[node name="Health" parent="." instance=ExtResource("3_hjvrf")]
health = 50

[node name="MinionState" parent="." instance=ExtResource("4_5r8dl")]
unique_name_in_owner = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 50.0
avoidance_layers = 3
avoidance_mask = 3
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.817117, 0.000532904, 0.81846, 1)

[node name="MinionHealthBar" type="TextureProgressBar" parent="."]
offset_left = -96.0
offset_top = -98.0
offset_right = 96.0
offset_bottom = -34.0
texture_under = ExtResource("5_0g4bq")
texture_over = ExtResource("5_0g4bq")
texture_progress = ExtResource("5_0g4bq")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
